--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>I-Frame Testing</title>
 </head>
 <body>
-<iframe id="iframe" src=""></iframe>
+<iframe id="iframe" allow="microphone camera" src=""></iframe>
 
 <div class="controls">
     <div class="item">
