--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             iframe {
                 width: 100%;
                 height: 700px;
+                background-color: #e9ecef;
             }
         </style>
 
