--- a/index.html
+++ b/index.html
@@ -59,17 +59,33 @@
 
             <!-- iFrame -->
             <iframe id="iframe"
+                    class="border"
                     frameBorder="0"
                     allow="camera"
                     src="">
             </iframe>
+
+        </div>
+
+        <!-- Post Message Alert -->
+        <div id="postMessage"
+             class="alert alert-success mb-0 fade hide"
+             role="alert">
+
+            <strong>Message Received:</strong>
+            Message: <span id="alertMessage"></span>&nbsp;
+            Origin: <span id="alertOrigin"></span>
         </div>
 
         <style>
             iframe {
                 width: 100%;
                 height: 700px;
-                background-color: #e9ecef;
+            }
+            .alert {
+                width: 100%;
+                position: fixed;
+                bottom: 0px;
             }
         </style>
 
@@ -92,6 +108,20 @@
                 iframe.allow = cameraPermission.checked ? 'camera' : '';
                 iframe.src = url.value;
             }
+
+            function receiveMessage(event) {
+                console.log("Message Received:");
+                console.log(event);
+
+                document.getElementById("alertMessage").innerHTML = event.data;
+                document.getElementById("alertOrigin").innerHTML = event.origin;
+                document.getElementById("postMessage").classList.add("show");
+                setTimeout(function() {
+                    document.getElementById("postMessage").classList.remove("show");
+                }, 6000)
+            }
+
+            window.addEventListener("message", receiveMessage, true);
 
         </script>
     </body>
