--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     </head>
 
     <body>
+                    <!-- iFrame -->
+            <iframe id="iframe"
+                    class="border"
+                    frameBorder="0"
+                    allow="camera"
+                    src="">
+            </iframe>
         <div class="container mt-4">
 
             <!-- URL Input-->
@@ -57,13 +64,7 @@
                 Update iFrame
             </button>
 
-            <!-- iFrame -->
-            <iframe id="iframe"
-                    class="border"
-                    frameBorder="0"
-                    allow="camera"
-                    src="">
-            </iframe>
+
 
         </div>
 
@@ -80,7 +81,7 @@
         <style>
             iframe {
                 width: 100%;
-                height: 500px;
+                height: 100vh;
             }
             .alert {
                 width: 100%;
