--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <style>
             iframe {
                 width: 100%;
-                height: 100vh;
+                height: 100dvh;
             }
             .alert {
                 width: 100%;
