--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             iframe {
                 width: 100%;
                 height: 100dvh;
+                background: red;
             }
             .alert {
                 width: 100%;
