Update index.html back to original state

--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
     </head>
 
     <body>
-                    <!-- iFrame -->
-            <iframe id="iframe"
-                    class="border"
-                    frameBorder="0"
-                    allow="camera"
-                    src="">
-            </iframe>
         <div class="container mt-4">
 
             <!-- URL Input-->
@@ -64,7 +57,13 @@
                 Update iFrame
             </button>
 
-
+            <!-- iFrame -->
+            <iframe id="iframe"
+                    class="border"
+                    frameBorder="0"
+                    allow="camera"
+                    src="">
+            </iframe>
 
         </div>
 
@@ -81,8 +80,7 @@
         <style>
             iframe {
                 width: 100%;
-                height: 100dvh;
-                background: red;
+                height: 700px;
             }
             .alert {
                 width: 100%;
